[package]
name = "http-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.8"
log = "0.4.21"
env_logger = "0.11.2"
chrono = "0.4.34"
